--- a/util/meson.build
+++ b/util/meson.build
@@ -11,19 +11,24 @@ executable('mount.fuse3', ['mount.fuse.c'],
            link_with: [ libfuse ],
            install: true,
            install_dir: get_option('sbindir'),
-           c_args: '-DFUSE_USE_VERSION=35')
+           c_args: '-DFUSE_USE_VERSION=312')
 
 
 udevrulesdir = get_option('udevrulesdir')
 if udevrulesdir == ''
-  udev = dependency('udev')
-  udevrulesdir = join_paths(udev.get_pkgconfig_variable('udevdir'), 'rules.d')
+  udev = dependency('udev', required: false)
+  if udev.found()
+     udevrulesdir = join_paths(udev.get_variable(pkgconfig: 'udevdir'), 'rules.d')
+  endif
+endif
+
+if udevrulesdir == ''
+  warning('could not determine udevdir, udev.rules will not be installed')
 endif
 
 meson.add_install_script('install_helper.sh',
                          join_paths(get_option('prefix'), get_option('sysconfdir')),
                          join_paths(get_option('prefix'), get_option('bindir')),
                          udevrulesdir,
-                         '@0@'.format(get_option('useroot')))
-
-
+                         '@0@'.format(get_option('useroot')),
+                         get_option('initscriptdir'))
