update BUILD.gn. 缩小头文件范围
Signed-off-by: 陈明星 <chenmingxing4@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -39,7 +39,8 @@ config("libfuse_public_config") {
   include_dirs = [
     "//third_party/libfuse/include",
     "//third_party/libfuse/lib",
-    "//third_party/libfuse",
+    "//third_party/libfuse/util",
+    "//third_party/libfuse/example",
   ]
 }
 
