updater add libfuse.so
Signed-off-by: unknown <zhangchun39@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -94,5 +94,8 @@ ohos_shared_library("libfuse") {
   part_name = "libfuse"
   output_name = "libfuse"
   install_enable = true
-  install_images = [ "system" ]
+  install_images = [
+    "system",
+    "updater",
+  ]
 }
